Migrate to PyTorch for better performance

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-numpy
+numpy~=1.21.5
 tensorflow
 pandas
-pyautogui
-opencv-python
-pillow
-pytesseract
+pyautogui~=0.9.53
+opencv-python~=4.5.5.64
+pillow~=9.0.1
+pytesseract~=0.3.9
 mss
-pynput
-PyAudio
-librosa
+pynput~=1.7.6
+PyAudio~=0.2.11
+librosa~=0.9.1
+torchsummary
+tensorflow-gpu~=2.8.0
+torch~=1.7.1+cu110
